# Wallpaper_Carousel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cpp  config.example.json  config.h  images_carousel.cpp  images_carousel.h  images_carousel.ui  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: install.sh  wallpaper-chooser.desktop  wallpaper_chooser.desktop
src/: config.cpp  config.h  images_carousel.cpp  images_carousel.h  loading_indicator.cpp  loading_indicator.h  logger.cpp  logger.h  main.cpp  main_window.cpp  main_window.h
src/designer/: images_carousel.ui  loading_indicator.ui  main_window.ui
